Update DatabaseFileLookupTest.java